--- a/index.html
+++ b/index.html
@@ -4471,7 +4471,7 @@
 		</div>
 	</div>
 	<!---CREATE STREAM-->
-	<div class="create_stream_popup">
+	<div class="create_stream_popup" style="visibility:hidden">
 		<div class="category_string_name">
 			<span class="category_text">Добавить стрим</span>
 		</div>
