--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
@@ -2054,12 +2054,13 @@
 										<div class="click_user_popup_wrapper">
 											<div class="chat_list_wrapper">
 												<div class="smiles_at_this_group">
-													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
-													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
-													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
-													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
-													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
-													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
+												
+													<img src="images/peka.png" width="52" alt="chat_smile" class="chat_smiles" />
+													<img src="images/peka.png" width="50" alt="chat_smile" class="chat_smiles" />
+													<img src="images/peka.png" width="48" alt="chat_smile" class="chat_smiles" />
+													<img src="images/peka.png" width="46" alt="chat_smile" class="chat_smiles" />
+													<img src="images/peka.png" width="44" alt="chat_smile" class="chat_smiles" />
+													<img src="images/peka.png" width="42" alt="chat_smile" class="chat_smiles" />
 													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
 													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
 													<img src="images/peka.png" alt="chat_smile" class="chat_smiles" />
@@ -4471,7 +4472,7 @@
 		</div>
 	</div>
 	<!---CREATE STREAM-->
-	<div class="create_stream_popup">
+	<div class="create_stream_popup" style="visibility:hidden">
 		<div class="category_string_name">
 			<span class="category_text">Добавить стрим</span>
 		</div>
